--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "click>=8.1.0",
-    "requests>=2.31.0",
-    "python-dotenv>=1.0.0",
+    "pydantic>=2.0",
+    "huggingface-hub",
 ]
 authors = [{ name = "Noah Klaholz" }]
 license = { text = "MIT" }
